# qqcli-rs

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml
.gstack/qa-reports/: qa-report-qqcli-rs-2026-06-07.md
docs/: decoupling-compliance.md  header-philosophy.md  header.html  lightweight-hook-design.md
src/: cache.rs  commands.rs  config.rs  db.rs  db_index.rs  decrypt.rs  main.rs  message.rs  normalize.rs  output.rs  schema.rs  segment.rs  test_ws.rs  uid_resolve.rs
src/napcat/: ipc_client.rs  mod.rs  models.rs
