[package]
name = "qqcli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Curry"]
description = "QQ 本地数据 CLI — 读取聊天记录、搜索、统计、导出"
license = "MIT"

[[bin]]
name = "qq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "help", "error-context"] }
clap_complete = "4.5"
rusqlite = { version = "0.32", features = ["bundled"] }
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "6.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
regex-lite = "0.1"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
